--- a/gb/20/8/26/n12358840.md
+++ b/gb/20/8/26/n12358840.md
@@ -1,16 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/uzotts3669/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uzotts3669/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/uzotts3669/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/uzotts3669/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/uzotts3669/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uzotts3669/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/uzotts3669/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/uzotts3669/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/uzotts3669/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/uzotts3669/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/uzotts3669/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/uzotts3669/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/uzotts3669/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/uzotts3669/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/uzotts3669/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/uzotts3669/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/uzotts3669/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/uzotts3669/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/uzotts3669/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/uzotts3669/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/uzotts3669/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/uzotts3669/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/uzotts3669/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/uzotts3669/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【欺世大观】杨虎城走钢丝 “英雄”跌入地狱</h2>
-<a href="https://git.io/JUZgM"><img width="600" src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/uzotts3669/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d2zq9v5psazuww.cloudfront.net/Y4hZytews"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>杨虎城因主导发动改变中国历史的西安军事叛变，登上中共“英雄模范”双百名单。然而在西安叛变和平解决，中共得以存活后，却过河拆桥，卸磨杀驴，杨最终自食恶果，命丧黄泉。（公有领域／大纪元合成）
 </h6>
 <hr>
-	<p>【大纪元2020年09月07日讯】大家好。欢迎朋友们再次光临《欺世大观》。上回书说了张学良。本集再说说<ahref="https://github.com/uzotts3669/djy/blob/master/gb/tag/%E6%9D%A8%E8%99%8E%E5%9F%8E.md#1">杨虎城</a>。他同样登上了中共“<ahref="https://github.com/uzotts3669/djy/blob/master/gb/tag/%E8%8B%B1%E9%9B%84%E6%A8%A1%E8%8C%83.md#1">英雄模范</a>”双百名单，就是因为主导发动了改变中国历史的<ahref="https://github.com/uzotts3669/djy/blob/master/gb/tag/%E8%A5%BF%E5%AE%89%E5%86%9B%E4%BA%8B%E5%8F%9B%E5%8F%98.md#1">西安军事叛变</a>。</p>
-<p>叛变的这俩双伴儿兄弟，张学良名气大，但杨才是主角。张学良晚年说，他不过是在旁协助杨。张杨都没料到的是，西安叛变和平解决，中共得以存活，却过河拆桥，卸磨杀驴，杨最终<ahref="https://github.com/uzotts3669/djy/blob/master/gb/tag/%E8%87%AA%E9%A3%9F%E6%81%B6%E6%9E%9C.md#1">自食恶果</a>，命丧黄泉。</p>
-<p><center><a src=""></a><a href="https://git.io/JUZgM"><img width="600" src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/uzotts3669/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/k_vmA8_Fa-4" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
+	<p>【大纪元2020年09月07日讯】大家好。欢迎朋友们再次光临《欺世大观》。上回书说了张学良。本集再说说<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%A8%E8%99%8E%E5%9F%8E.md#1">杨虎城</a>。他同样登上了中共“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8B%B1%E9%9B%84%E6%A8%A1%E8%8C%83.md#1">英雄模范</a>”双百名单，就是因为主导发动了改变中国历史的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%A5%BF%E5%AE%89%E5%86%9B%E4%BA%8B%E5%8F%9B%E5%8F%98.md#1">西安军事叛变</a>。</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 170px; margin-bottom: 20px; border-radius: 10px; overflow: hidden;"><a style="width: 100%; height: 170px;" src="https://player.captivate.fm/episode/ea10a2eb-8f8f-489f-bbaa-c7a923f51587" width="300" b="150" frameborder="no" scrolling="no" seamless=""></a></div>
+<p><strong>（听更多新闻请至“听纪元”平台）</strong></p>
+<p>叛变的这俩双伴儿兄弟，张学良名气大，但杨才是主角。张学良晚年说，他不过是在旁协助杨。张杨都没料到的是，西安叛变和平解决，中共得以存活，却过河拆桥，卸磨杀驴，杨最终<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%87%AA%E9%A3%9F%E6%81%B6%E6%9E%9C.md#1">自食恶果</a>，命丧黄泉。</p>
+<p><center><a src=""></a><a href="https://d2zq9v5psazuww.cloudfront.net/Y4hZytews"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/k_vmA8_Fa-4" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
 <h2>“投机军阀”</h2>
-<p><ahref="https://github.com/uzotts3669/djy/blob/master/gb/tag/%E6%9D%A8%E8%99%8E%E5%9F%8E.md#1">杨虎城</a>和老毛同岁。1893年出生在陕西蒲城一个农民家。没读什么书，大字不识几个，行个文都是别人代笔。1911年辛亥革命前后，杨落草为寇，成为关中一带知名刀客。先后进入反袁世凯称帝的陕西护国军，孙中山号召护法而建立的靖国军，参加了护法战争和军阀大战等等。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%A8%E8%99%8E%E5%9F%8E.md#1">杨虎城</a>和老毛同岁。1893年出生在陕西蒲城一个农民家。没读什么书，大字不识几个，行个文都是别人代笔。1911年辛亥革命前后，杨落草为寇，成为关中一带知名刀客。先后进入反袁世凯称帝的陕西护国军，孙中山号召护法而建立的靖国军，参加了护法战争和军阀大战等等。</p>
 <p>1922年，杨驻军陕北榆林，有人介绍他结识了陕西共产党创始人之一魏野畴。魏后来长期在杨虎城部队任职，对杨的思想影响非常大。</p>
 <p>1924年，杨虎城经孙中山介绍先加入了国民党，又率军参加北伐，被编为国民军第三军第三师。1927年4月，国民革命军总司令蒋介石基于中共在国民党内部破坏，决意“清党”反共，从国民党中驱逐、抓捕共产党员。杨虎城因为同情中共并没有完全追随蒋，只是让魏野畴等共产党员离开自己部队。中共随即成立了皖北特委，隶属中共河南省委，负责人就是魏野畴、南汉宸等人。</p>
 <p>10月，杨虎城申请加入中共，希望“做第二个贺龙”，将部队改编为红军，但被中共河南省委拒绝。送上门不要，想来杨虎城可能够郁闷的。</p>
@@ -32,7 +35,7 @@
 <p>此后，中共人员往返西安、延安，进入内地，回归陕北，路条均由杨的十七路军提供。国民政府指令杨部剿共，他却不但与中共暗通款曲，甚至已经同流合污。然后，再由杨虎城去拉同样被中共分子包围的张学良合谋反蒋。</p>
 <p>张学良东北军中多名中共党员和“左倾”分子，掌握了张学良的一切秘密活动，一切与共产党联系的技术活儿，乃至东北军全军的人事工作。张学良副官兼机要秘书苗剑秋一再鼓动张学良策动西安事变，说不要替国民党打内战。</p>
 <p>狡猾的中共抓住了张学良和东北军丧失家园的悲愤“情结”，接近他，包围他，从而使“未足而立之年，即负方面，独揽大权”，“未作过任何人部下，未有过任何长官”，“忿事急躁”的“少帅”张学良，终于不知不觉地改变了是非观。在中共的渗透下，充满野心的杨虎城和涉世未深的张学良同蒋介石在政见上分歧逐渐加剧。</p>
-<h2>发动<ahref="https://github.com/uzotts3669/djy/blob/master/gb/tag/%E8%A5%BF%E5%AE%89%E5%86%9B%E4%BA%8B%E5%8F%9B%E5%8F%98.md#1">西安军事叛变</a></h2>
+<h2>发动<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%A5%BF%E5%AE%89%E5%86%9B%E4%BA%8B%E5%8F%9B%E5%8F%98.md#1">西安军事叛变</a></h2>
 <p>1936年12月9日“西安兵变”前三天，中共地下党策划了西安学生3,000多人的广场集会，呼吁“国共合作，团结抗日”。次日，杨虎城即令宋绮云参加草拟《张、杨兵谏经过》、《张、杨八大主张》等重要文件。这些文件都由宋绮云带回报社连夜印发号外。第三天，蒋介石再次来到西安，张、杨发动了军事叛变。</p>
 <p>虽然在斯大林命令下，中共被迫要求张、杨不要杀蒋，西安叛变最终和解，但叛变使蒋介石国民政府“八年剿（共）匪之功，隳于一旦”；也破坏了蒋介石抗日的战略部署；全面抗日的时间表被迫提前，中国人民为此付出巨大生命代价；而起死回生的中共却在战争中趁机坐大。</p>
 <p>虽然前一集张学良已经说过，但重要的话说两遍：没有西安军事叛变，共产党早就被消灭了，中国现代史将被改写！</p>
@@ -41,51 +44,50 @@
 <p>杨还训斥主战的孔从周、李振西：“看你们傻的！和平解决是共产党的坚决主张。他们过去没有机会敲（蒋介石）中央的门，现在利用东北军、十七路军敲开了中央的大门，人家怎能再同我们一道反对中央呢？”（张魁堂：《挽危救亡的史诗》，广西师范大学出版社1994年版）</p>
 <h2>悲惨下场</h2>
 <p>西安兵变后，杨虎城被蒋介石撤销了一切职务，被迫到欧洲考察军事。抗战全面爆发后，杨虎城多次要求回国抗日，未获批准而偷偷回到香港后，即被国民政府逮捕，囚禁于大陆监狱，整整关了12年。在蒋介石离开大陆前往台湾之后，杨虎城和儿女在重庆被军统局秘密处死，其妻、中共党员谢葆真之前病死。杨虎城一家落了个身败名裂、死无葬身之地的悲惨下场！一直在杨部做文宣统战的中共党员宋绮云一家三口同时被处死。</p>
-<p>至此，颇有军事才华、在国军北伐中屡立战功的武夫杨虎城，最终因误上中共贼船，昏了头也失了方向，被狡猾的中共始乱终弃，<ahref="https://github.com/uzotts3669/djy/blob/master/gb/tag/%E8%87%AA%E9%A3%9F%E6%81%B6%E6%9E%9C.md#1">自食恶果</a>。被邪恶共产党摆上英雄名单，不能不说是生前死后都没逃过被利用。杨虎城地下有知，会不会恨得牙根疼呢？</p>
+<p>至此，颇有军事才华、在国军北伐中屡立战功的武夫杨虎城，最终因误上中共贼船，昏了头也失了方向，被狡猾的中共始乱终弃，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%87%AA%E9%A3%9F%E6%81%B6%E6%9E%9C.md#1">自食恶果</a>。被邪恶共产党摆上英雄名单，不能不说是生前死后都没逃过被利用。杨虎城地下有知，会不会恨得牙根疼呢？</p>
 <p>故事讲完了，咱们下集再见！</p>
-<p>《欺世大观》制作组</p>
+<p>《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/【欺世大观】.md#1">欺世大观</a>》制作组</p>
 <p>责任编辑：李昊? ＃</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/12/8/27/n3668471.md#1">蒋介石曾密嘱剥夺张学良、杨虎城兵权</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/14/12/12/n4316675.md#1">【历史今日】西安事变 中共藉邪恶手段避祸窃国</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/15/8/30/n4516239.md#1">《抗日领袖蒋介石》连载（16）西安事变</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/16/8/24/n8231516.md#1">林辉：还原中共“英雄模范”之杨虎城</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/8/27/n3668471.md#1">蒋介石曾密嘱剥夺张学良、杨虎城兵权</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/12/12/n4316675.md#1">【历史今日】西安事变 中共藉邪恶手段避祸窃国</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/8/30/n4516239.md#1">《抗日领袖蒋介石》连载（16）西安事变</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/24/n8231516.md#1">林辉：还原中共“英雄模范”之杨虎城</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/21/n10992360.md#1" target="_blank">传奇总统里根（7）: 唤醒苏联领导人</a></li><li><a href="https://github.com/uzotts3669/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/11/13/n2327659.md#1" target="_blank">法轮功简介</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045322.md#1" target="_blank">《苦菜花》人物原型的真实人生（3）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/20/n10729835.md#1" target="_blank">权威学者：侵犯宗教自由 中共被点名最多</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/8/29/n12366244.md#1">乐山大佛洗脚天下乱 刘伯温预言了出路</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/8/31/n12368878.md#1">妈妈昏倒 5岁儿打“玩具救护车”上号码救母</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/9/1/n12373464.md#1">北宋有位“鱼头参政” 让皇帝感动让同僚敬畏</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/6/13/n12183566.md#1">贾雨村，一个从来不曾过时的现实主义者</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/8/26/n12358223.md#1">中元节民俗缘何来？为何建醮普渡？</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/9/6/n12383355.md#1">【大选观察】谁想干预大选？川普高官齐指中共</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/9/6/n12383556.md#1">【纪元播报】内幕：中共招间谍窃F-35机密</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/9/5/n12382333.md#1">【纽约调查】电信诈骗花样翻新 骗子玩心理战</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/9/4/n12381285.md#1">【时事纵横】习近平五个绝不答应 网络炸锅</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/9/5/n12382568.md#1">内蒙女官员堕楼亡 遗书流出 夫遭警方封口</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/9/5/n12383218.md#1">川普回应《大西洋》报导是骗局 11官员作证</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/9/5/n12383230.md#1">台影迷抵制刘亦菲《花木兰》 港网友感动致谢</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/9/4/n12381220.md#1">中共恐吓捷克并打压台湾 电视名嘴狠酸获赞爆</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/9/6/n12384714.md#1">陆网民看盗版《花木兰》撑警女主角遭六成差评</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/9/6/n12383538.md#1">曾入围金曲歌王 严咏能台上昏倒不治 享年50岁</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/9/4/n12380331.md#1">《全明星运动会》开录 李玖哲等大咖班底曝光</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/9/6/n12383740.md#1">血旗拿反士兵晕倒 中共军队在国际赛场出糗</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/9/4/n12381103.md#1">练腹肌不能瘦小腹？减腹部脂肪1种运动最有效</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/9/5/n12382103.md#1">车评：视觉与听觉冲击 2020 Toyota Camry TRD</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/9/6/n12383875.md#1">加拿大10岁男童遭美洲狮攻击 小狗奋勇救人</a></li>
-<li><a href="https://github.com/uzotts3669/djy/blob/master/gb/20/9/3/n12378940.md#1">有平民之风的黄芪 在日常的4个妙用</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/uzotts3669/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/uzotts3669/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/26/n12358840.htm">【欺世大观】杨虎城走钢丝 “英雄”跌入地狱</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/26/n12358840.htm">【欺世大观】杨虎城走钢丝 “英雄”跌入地狱</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/uzotts3669/djy/blob/master/gb/20/8/26/n12358840.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/uzotts3669/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/uzotts3669/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/uzotts3669/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/uzotts3669/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uzotts3669/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/8/26/n12358840.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
