--- a/gb/20/8/26/n12359157.md
+++ b/gb/20/8/26/n12359157.md
@@ -1,28 +1,28 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ibfsyb3725/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ibfsyb3725/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ibfsyb3725/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ibfsyb3725/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ibfsyb3725/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ibfsyb3725/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ibfsyb3725/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ibfsyb3725/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ibfsyb3725/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ibfsyb3725/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ibfsyb3725/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ibfsyb3725/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ibfsyb3725/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ibfsyb3725/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【欺世大观】平型关和百团战役就是俩红气球</h2>
-<a href="https://git.io/JUcVm"><img width="600" src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ibfsyb3725/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d2torrlf4djx10.cloudfront.net/O7giYHzCd"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>平型关战役和百团大战，共军在哪里？这两场仗究竟打得怎么样？为何说这两场战役是中共吹大的两只红球？（公有领域／大纪元合成）
 </h6>
 <hr>
 	<p>【大纪元2020年09月09日讯】各位看官， 今年（8月）是抗战胜利75周年，趁热，这一集咱再说说八年抗战共军在哪里、打过几出像样的仗、歼灭日寇几多人、自己多大牺牲？到底是不是它向我们吹了70年的牛皮那样——所谓抗战是它领导的。下集我们再对着说说国军。</p>
-<p>先来做个数字对比：中华民国政府主席、军委会蒋中正委员长领导的国军在抗战期间，进行抗日大会战22次，另打大仗1,117次、小仗28,931次；共军呢，能吹的战役实在少得可怜。要不然怎么会在史书和学生课本中翻过来掉过去抖落“<ahref="https://github.com/ibfsyb3725/djy/blob/master/gb/tag/%E5%B9%B3%E5%9E%8B%E5%85%B3%E5%A4%A7%E6%8D%B7.md#1">平型关大捷</a>”和“<ahref="https://github.com/ibfsyb3725/djy/blob/master/gb/tag/%E7%99%BE%E5%9B%A2%E5%A4%A7%E6%88%98.md#1">百团大战</a>”两仗。好，今天咱们就事论事，来看看这两仗究竟打得怎么样，能不能代表把日本鬼子赶出中国的“八年抗战”。</p>
-<p><center><a src=""></a><a href="https://git.io/JUcVm"><img width="600" src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ibfsyb3725/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/2yBFno3Zntg" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
-<h2>“<ahref="https://github.com/ibfsyb3725/djy/blob/master/gb/tag/%E5%B9%B3%E5%9E%8B%E5%85%B3%E5%A4%A7%E6%8D%B7.md#1">平型关大捷</a>”大吗？赢了为啥逃跑？</h2>
+<p>先来做个数字对比：中华民国政府主席、军委会蒋中正委员长领导的国军在抗战期间，进行抗日大会战22次，另打大仗1,117次、小仗28,931次（也有说38,931次）；共军呢，能吹的战役实在少得可怜。要不然怎么会在史书和学生课本中翻过来掉过去抖落“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B9%B3%E5%9E%8B%E5%85%B3%E5%A4%A7%E6%8D%B7.md#1">平型关大捷</a>”和“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%99%BE%E5%9B%A2%E5%A4%A7%E6%88%98.md#1">百团大战</a>”两仗。好，今天咱们就事论事，来看看这两仗究竟打得怎么样，能不能代表把日本鬼子赶出中国的“八年抗战”。</p>
+<p><center><a src=""></a><a href="https://d2torrlf4djx10.cloudfront.net/O7giYHzCd"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/2yBFno3Zntg" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
+<h2>“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B9%B3%E5%9E%8B%E5%85%B3%E5%A4%A7%E6%8D%B7.md#1">平型关大捷</a>”大吗？赢了为啥逃跑？</h2>
 <p>平型关也叫作“平刑关”，在山西省繁峙县东边偏北130里，西北连浑源县，东南接河北省阜平县界，算个要冲。</p>
 <p>1937年七七事变爆发，日军全面入侵中国，北平天津先后沦陷。8月20日，国民政府召开国防会议，特地将山西、察哈尔、绥远列为第二战区，山西绥靖主任阎锡山被委以司令长官。不久，石家庄、察哈尔张垣市（今张家口）先后失陷，晋北告急。国军退守雁门关、平型关、晋北要隘阳方口一带。</p>
 <p>山西属于兵家要地，可以牵制日军南下，政府就令国军第十五军、共军改编的第十八集团军（俗称“八路军”）调归阎锡山司令指挥，负责巡守平型关，以便切断日军后方联络线。</p>
 <p>很快，十五军军长刘茂恩率部抵达太原。据他后来写的《刘茂恩回忆录》一书记载，当时刘将军没见到去雁门关督师的阎锡山，就去见了山西省政府主席赵戴文。双方谈到共军参战一事。刘将军很怀疑共军会帮国军打日军，他当时说，“八路军能帮我们打日本人？那真是日头要从西边出来了！恐怕待日本人打来，他们就会乘之而入，捣乱我们。”</p>
 <p>刘将军当晚即率军乘火车转同蒲铁路北上到达怀仁县；听说大同被日军占领，就下车赶去占据平型关以西一带阵地，依靠泰戏山构筑工事。泰戏山在繁峙县东北130里，上边就是平型关。刘将军十五军备战平型关正面阵地，向东绵延40里，西至北楼口80里，军部则驻在平型关后边的小冶镇上。左翼是国军第三十三军，占领了大小石口阵地，而八路军当时只是协同，参与左翼雁门关一带阵地，因此，在主战场平型关正面，根本没见到共军的影子。</p>
-<p>据刘茂恩将军回忆，日军板垣征四郎第五师团主力进攻平型关和西边32里的团城口时，战况紧急，共军<ahref="https://github.com/ibfsyb3725/djy/blob/master/gb/tag/%E6%9E%97%E5%BD%AA.md#1">林彪</a>指挥的部队却潜藏在关右山区杨镇，并没有支援国军。9月23、24日，日军接连进攻，遭到十五军严厉打击，第二营官兵也有不少伤亡，所幸第一营及时增援，两面夹击，才把日军打跑。</p>
-<p>之后，<ahref="https://github.com/ibfsyb3725/djy/blob/master/gb/tag/%E6%9E%97%E5%BD%AA.md#1">林彪</a>一一五师得知敌军辎重队只有400多人，而且多数徒手，只有少数步枪，在蔡家峪落在日军大部队后面，便采取“以大吓小”的手法袭击该辎重队。他去打辎重队，就使左翼雁门关阵地出现空档。从而导致日军从北楼口以西72里处的左翼，叫做大小石口，繁峙县北60里的茹越口堡突进平型关国军主阵地后方，造成逆转，平型关战役最终功败垂成。</p>
+<p>据刘茂恩将军回忆，日军板垣征四郎第五师团主力进攻平型关和西边32里的团城口时，战况紧急，共军<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9E%97%E5%BD%AA.md#1">林彪</a>指挥的部队却潜藏在关右山区杨镇，并没有支援国军。9月23、24日，日军接连进攻，遭到十五军严厉打击，第二营官兵也有不少伤亡，所幸第一营及时增援，两面夹击，才把日军打跑。</p>
+<p>之后，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9E%97%E5%BD%AA.md#1">林彪</a>一一五师得知敌军辎重队只有400多人，而且多数徒手，只有少数步枪，在蔡家峪落在日军大部队后面，便采取“以大吓小”的手法袭击该辎重队。他去打辎重队，就使左翼雁门关阵地出现空档。从而导致日军从北楼口以西72里处的左翼，叫做大小石口，繁峙县北60里的茹越口堡突进平型关国军主阵地后方，造成逆转，平型关战役最终功败垂成。</p>
 <p>对此，刘茂恩描述共军是“逃兵”。中共的记述却是这样描绘的：在日军二十一旅团一部及辎重车队沿灵丘至平型关公路向前线西进时，进入了林彪的一一五师伏击地域。经过约6个小时的战斗，一一五师取得“首战大捷”。这就是后来中共一直吹嘘的“平型关大捷”。</p>
 <p>然后呢？取得平型关战役“胜利”后的中共军队并没有去增援国军，而日军增援部队却不断来到，和国军再度发生激烈交火。这边，日军增援不断，那边，共军消失不见。您可能会问，林彪跑哪儿去了，实话说，我也不知道，连中共自己也支支吾吾、语焉不详。所以，从不阻挡日军增援部队继续加入战斗看，刘将军指共军为“逃兵”并不过分。</p>
 <p>后来，中共在战报中称歼灭日军1,000余人；而日军的战报却说在蔡家峪日军亡167人、伤94人。刘将军回忆录中记载的是日军死400多人。那么，中共究竟在哪里消灭了1,000多日军呢？很显然，它在说大话、夸大战果。</p>
 <p>还有更可笑的，1992年聂荣臻离世，杨尚昆发悼词，居然称聂指挥了平型关战役，并取得了“中国抗战以来的第一个大胜仗”。因为什么呢？林彪1971年出逃坠机身亡，犯了背叛老毛的“政治错误”，中共历史都给改了，吹爆棚的“平型关大捷”指挥官林彪也就变成了一朵浮云。</p>
-<h2><ahref="https://github.com/ibfsyb3725/djy/blob/master/gb/tag/%E5%BD%AD%E5%BE%B7%E6%80%80.md#1">彭德怀</a>“<ahref="https://github.com/ibfsyb3725/djy/blob/master/gb/tag/%E7%99%BE%E5%9B%A2%E5%A4%A7%E6%88%98.md#1">百团大战</a>”遭毛泽东痛批</h2>
-<p>回来说说中共吹嘘的剩下的那场战役：“百团大战”。1940年8月，驻守在山西武乡县王家峪的八路军，没有得到国民政府军蒋委员长、第二战区阎锡山司令长官的作战命令，即由时任八路军副总指挥的<ahref="https://github.com/ibfsyb3725/djy/blob/master/gb/tag/%E5%BD%AD%E5%BE%B7%E6%80%80.md#1">彭德怀</a>发动、指挥120师、129师、晋察冀部队开打。老毛原本批了22个团参战，也定了此战以破坏华北日本占领军交通线、据点、矿山、封锁沟为主，开始时叫做“正太路战役”。</p>
+<h2><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BD%AD%E5%BE%B7%E6%80%80.md#1">彭德怀</a>“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%99%BE%E5%9B%A2%E5%A4%A7%E6%88%98.md#1">百团大战</a>”遭毛泽东痛批</h2>
+<p>回来说说中共吹嘘的剩下的那场战役：“百团大战”。1940年8月，驻守在山西武乡县王家峪的八路军，没有得到国民政府军蒋委员长、第二战区阎锡山司令长官的作战命令，即由时任八路军副总指挥的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BD%AD%E5%BE%B7%E6%80%80.md#1">彭德怀</a>发动、指挥120师、129师、晋察冀部队开打。老毛原本批了22个团参战，也定了此战以破坏华北日本占领军交通线、据点、矿山、封锁沟为主，开始时叫做“正太路战役”。</p>
 <p>8月20日晚8点打响。始料不及的是，随后来了很多没接到命令参战的团，一是山东、安徽、延安的八路团级部队加盟凑热闹；二是1937年后中共在日占区和华北根据地扩编的地方团，军饷和军火都不在国民政府供给名册内，枪支、军服也五花八门；第三也是更大量的，是根本没军服、拿起枪组成军队放下枪就是老百姓的民兵。这批人对日军袭扰压抑已久，一看开了战，没等八路军命令即加入战斗。这些人的加入导致战役规模迅速扩大，连延安的毛泽东也没料到。最终形成约40万人105个团参与的规模，因而更名为“百团大战”。战役哩哩啦啦打了3个半月，到12月5日才结束。</p>
 <p>战斗结果呢：共军、国军、日军说法相差极大，为公平起见，分述如下：</p>
 <p>组织者彭德怀在自传中称：“此役共消灭日伪军三万余人。”八路军总部战后《百团大战各阶段作战概述》说：八路军毙伤日军12,645人、伪军5,153人。当年12月10日又在另一篇《百团大战总结战绩》中称，八路军毙伤日军20,645人、伪军5,155人。两个文件相隔没几天，日本人又多死了8,000。</p>
@@ -36,49 +36,48 @@
 <p>“百团大战”后，日军调回约二十万的部队于1941年至1943年进行数次大“扫荡”，推行“杀光、烧光、抢光”的“三光”政策。扫荡的结果是八路军主力两三年来建立的所谓“抗战根据地”几乎被扫平，只好撤出山西，退守延安，而在当地扩编的民兵团只能化整为零，调整回最低限度的游击战。总指挥朱德也只好回归延安，参加“大生产运动”。参加百团大战的一二〇师三五九旅在旅长王震的率领下去南泥湾实行军垦屯田，种植大量鸦片，卖到日统区和国统区，为中共的生存提供保障资金。</p>
 <p>回顾八年抗战，假抗日、真卖国、坐收渔利的中共，如今除了吹吹“平型关大捷”、“百团大战”什么的，确实也没什么可夸耀的了。而即便这两个吹大的气球的制造者——一个林彪，一个彭德怀，下场也都像气球一样，到时候总要崩爆。我们以后的节目都会为大家呈现。一句话，为共产党卖命，都没有好下场。</p>
 <p>好，今天的故事讲完了，我们下集再见。</p>
-<p>《欺世大观》制作组</p>
+<p>《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/【欺世大观】.md#1">欺世大观</a>》制作组</p>
 <p>责任编辑：李昊#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/5/6/5/n945264.md#1">八路军的“平型关大捷”其实是欺世盗名</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/6/7/3/n1371621.md#1">“平型关大捷”究竟消灭日军多少人？</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/17/3/3/n8868761.md#1">林辉：中共吹嘘的平型关大捷与百团大战真相</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/17/6/15/n9268434.md#1">【秘档】百团大战、皖南事变的真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/5/6/5/n945264.md#1">八路军的“平型关大捷”其实是欺世盗名</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/6/7/3/n1371621.md#1">“平型关大捷”究竟消灭日军多少人？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/3/3/n8868761.md#1">林辉：中共吹嘘的平型关大捷与百团大战真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/6/15/n9268434.md#1">【秘档】百团大战、皖南事变的真相</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/16/n10149315.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（三）</a></li><li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11490640.md#1" target="_blank">来自摩尔多瓦的心声：道德是人类真正价值</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/31/n10602910.md#1" target="_blank">【还原史实】“三反五反”掠夺企业主 引爆自杀潮</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/29/n11417416.md#1" target="_blank">美大使发推特 谴责中共迫害法轮功</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/8/29/n12366244.md#1">乐山大佛洗脚天下乱 刘伯温预言了出路</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/1/n12373464.md#1">北宋有位“鱼头参政” 让皇帝感动让同僚敬畏</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/2/n12374931.md#1">《傲慢与偏见》：19世纪名著至今仍能启迪人心</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/4/n12380954.md#1">【馨香雅句】原来这项技能承传千年 曾让中国人武艺高强</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/8/10/n12318970.md#1">【命理】为何王侯将相命中多见七杀凶星？</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/8/n12388103.md#1">【新闻第一现场】拜登家族与中共 纪录片揭真相</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/8/n12387607.md#1">【拍案惊奇】中共密件曝若占台湾 要建集中营</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/8/n12389200.md#1">【重播】川普到访佛州 宣布扩展海上钻探禁令</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12387142.md#1">像科幻大片 美军大炮准确击落巡航导弹</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12387030.md#1">川普为何考虑制裁中芯？一份报告震动华府</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12387319.md#1">中印冲突升级 印军鸣枪警告 45年来首次</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/6/n12384714.md#1">陆网民看盗版《花木兰》撑警女主角遭六成差评</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12387235.md#1">林志玲丈夫AKIRA 顺利取得台湾居留证</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/8/n12389885.md#1">32岁继女近照曝光 林青霞曾获赞世上最好继母</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/8/n12389717.md#1">阿娇厦门动第二次手术 头部表面一层缝66针</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12385497.md#1">阿娇下榻厦门酒店出意外 头部受伤送医治疗</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12385823.md#1">美军B-2轰炸机降落印度洋小岛 画面曝光</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/6/n12383561.md#1">【美食天堂】蒜头可以冷冻？4方法长久保存新鲜大蒜</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/8/n12388298.md#1">美军“末日飞机”不怕核爆 它有何特点？</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12386108.md#1">公寓失火俄女在3楼急扔2儿 邻居拿毯子接</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12385809.md#1">超罕见圆形彩虹华丽现身 还不止一个</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ibfsyb3725/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ibfsyb3725/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/26/n12359157.htm">【欺世大观】平型关和百团战役就是俩红气球</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/26/n12359157.htm">【欺世大观】平型关和百团战役就是俩红气球</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/ibfsyb3725/djy/blob/master/gb/20/8/26/n12359157.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ibfsyb3725/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ibfsyb3725/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibfsyb3725/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/8/26/n12359157.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
